# django-app-prod-hw

./: .dockerignore  .env.template  .gitignore  188.225.24.22  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: auth-fixtures.json  blogapp-fixtures.json  shopapp-fixtures.json
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_article_author_article_category_article_tags.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html
mysite/myauth/: admin.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  logout.html  user_details.html  users_list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  urls.py  views.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/shopapp/: order_of_user_list.html  orders_changelist.html  shop-index.html
